<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnew"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#F5F0F6"
            android:textStyle="bold"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColorHint="#F5F0F6"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:autofillHints="username"/>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#F5F0F6"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:autofillHints="password" />
        <EditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="#F5F0F6"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textColor="#F5F0F6"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            />
        <TextView
            android:id="@+id/registerResponseMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F5F0F6"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/log_in"
            android:background="@drawable/login_button"/>
    </LinearLayout>

</LinearLayout>