<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121220"
    android:orientation="vertical"
    tools:context=".selectedItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="@drawable/rectangle_2_shape"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rectangle_1_shape"
            android:inputType="text"
            android:hint="@string/username"
            android:text=""
            android:textColorHint="@color/colorSecondary"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rectangle_1_shape"
            android:inputType="text"
            android:hint="@string/password"
            android:text=""
            android:textColorHint="@color/colorSecondary"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/si_passId"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/save_changes"
                android:textColor="#fff"
                android:fontFamily="@font/sfpromedium"
                android:textSize="16sp"
                android:background="@drawable/ripple_effect_raise"/>
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginVertical="16dp"
                android:text="@string/delete"
                android:fontFamily="@font/sfpromedium"
                android:textSize="16sp"
                android:textColor="@color/username_not_found_color"
                android:background="@drawable/ripple_effect_delete_button"/>
            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/cancel"
                android:fontFamily="@font/sfpromedium"
                android:textSize="16sp"
                android:textColor="@color/enigma_color"
                android:background="@drawable/ripple_effect_outline"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>