<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape"
    android:orientation="vertical"
    tools:context=".listView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/ripple_effect_text"
            android:fontFamily="@font/sfprosemibold"
            android:text="@string/add_password"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/btn_add"
            android:fontFamily="@font/sfprolight"
            android:gravity="center"
            android:text="@string/all_passwords"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/rectangle_2_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"/>
        <ScrollView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/listIsEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="100dp"
                android:text="@string/no_passwords_found"
                android:textColor="@color/rectangle_6_color"
                android:fontFamily="@font/sfprosemibold"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </ScrollView>
    </LinearLayout>




</LinearLayout>