<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_popup_window"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:id="@+id/popup_back"
            android:background="@drawable/ripple_effect_down_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/popup_back"
            android:layout_toStartOf="@+id/popup_edit"
            android:id="@+id/popup_title"
            android:text=""
            android:textColor="@color/white"
            android:fontFamily="@font/sfpromedium"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/popup_edit"
            android:background="@drawable/ripple_effect_edit_button"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/black"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:id="@+id/popup_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="22dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:fontFamily="@font/sfproregular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:id="@+id/popup_website"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/sfproregular"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:fontFamily="@font/sfproregular"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popup_username"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/sfproregular"
                android:layout_marginEnd="16dp"/>
            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/popup_copy_clip"
                android:background="@drawable/ripple_effect_copy_clipboard_button"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:fontFamily="@font/sfproregular"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popup_password"
                android:text="@string/asterisk_pass"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/sfproregular"
                android:layout_marginEnd="16dp"/>
            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/popup_show_pass"
                android:background="@drawable/ripple_effect_show_pass_button"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_on"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:fontFamily="@font/sfproregular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:id="@+id/popup_date"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/sfproregular"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/popup_id"
            android:text=""/>

    </LinearLayout>

</LinearLayout>